temp.7.3. usage of EntryWindowsConfig in Views and ColumnStyles

--- a/Chat/MVVM/Views/ChangePasswordView.xaml
+++ b/Chat/MVVM/Views/ChangePasswordView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:Chat.MVVM.Views"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
+             xmlns:configs="clr-namespace:Chat.MVVM.Models.Instances.Configs" 
              xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              mc:Ignorable="d" 
              d:Width="1920" d:Height="1080"
@@ -23,12 +24,13 @@
                  VerticalAlignment="Top"
                  Stretch="Uniform">
 
-            <StackPanel Width="500">
+            <StackPanel Width="{x:Static configs:EntryWindowsConfig.ContentWidth}">
 
                 <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
                            Text="Password Change"/>
 
-                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}" Height="100"/>
+                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}" 
+                                 Height="{x:Static configs:EntryWindowsConfig.LogotypeHeight}"/>
 
                 <Grid Margin="0,30">
 
