--- a/Chat/MVVM/Views/RegistrationView.xaml
+++ b/Chat/MVVM/Views/RegistrationView.xaml
@@ -7,6 +7,7 @@
              xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
+             xmlns:configs="clr-namespace:Chat.MVVM.Models.Instances.Configs" 
              mc:Ignorable="d" 
              d:Width="1920" d:Height="1080"
              d:DataContext="{d:DesignInstance Type=viewModels:RegistrationViewModel}"
@@ -23,13 +24,14 @@
         <Viewbox Grid.Column="1" 
                  VerticalAlignment="Top" 
                  Stretch="Uniform">
-        
-            <StackPanel Width="500">
+
+            <StackPanel Width="{x:Static configs:EntryWindowsConfig.ContentWidth}">
 
                 <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
                            Text="Sign up"/>
 
-                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}" Height="100"/>
+                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}"
+                                 Height="{x:Static configs:EntryWindowsConfig.LogotypeHeight}"/>
 
                 <Grid Margin="0,30">
 
