--- a/Chat/Styles/EntryWindows/EntryWindowsMainColumnStyle.xaml
+++ b/Chat/Styles/EntryWindows/EntryWindowsMainColumnStyle.xaml
@@ -1,15 +1,23 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converters="clr-namespace:Chat.MVVM.Views.AdditionalInfrastructure.Converters" 
-                    xmlns:converterParameters="clr-namespace:Chat.MVVM.Views.AdditionalInfrastructure.Converters.ConverterParameters" >
+                    xmlns:converterParameters="clr-namespace:Chat.MVVM.Views.AdditionalInfrastructure.Converters.ConverterParameters"
+                    xmlns:configs="clr-namespace:Chat.MVVM.Models.Instances.Configs">
 
     <Style x:Key="EntryWindowsMainColumnStyle" TargetType="{x:Type ColumnDefinition}">
 
         <Style.Resources>
+            
             <converters:WidthAndHeightToGridLengthConverter x:Key="Converter"/>
-            <converterParameters:WidthAndHeightToGridLengthConverterParameters x:Key="ConverterParams" HorizontalScreenValue="0.25" SquareScreenValue="0.35" VerticalScreenValue="0.4"/>
+            
+            <converterParameters:WidthAndHeightToGridLengthConverterParameters x:Key="ConverterParams" 
+                                                                               HorizontalScreenValue="{x:Static configs:EntryWindowsConfig.MainColumnHorizontalScreenValue}" 
+                                                                               SquareScreenValue="{x:Static configs:EntryWindowsConfig.MainColumnSquareScreenValue}" 
+                                                                               VerticalScreenValue="{x:Static configs:EntryWindowsConfig.MainColumnVerticalScreenValue}"/>
+            
         </Style.Resources>
 
+        
         <Setter Property="Width">
             <Setter.Value>
                 <MultiBinding Converter="{StaticResource Converter}" ConverterParameter="{StaticResource ConverterParams}">
