--- a/Chat/MVVM/Views/EntryWindows/ChangePasswordView.xaml
+++ b/Chat/MVVM/Views/EntryWindows/ChangePasswordView.xaml
@@ -1,17 +1,16 @@
-﻿<UserControl x:Class="Chat.MVVM.Views.RegistrationView"
+﻿<UserControl x:Class="Chat.MVVM.Views.EntryWindows.ChangePasswordView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Chat.MVVM.Views"
-             xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+             xmlns:local="clr-namespace:Chat.MVVM.Views.EntryWindows"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              xmlns:configs="clr-namespace:Chat.MVVM.Models.Instances.Configs" 
+             xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              mc:Ignorable="d" 
              d:Width="1920" d:Height="1080"
-             d:DataContext="{d:DesignInstance Type=viewModels:RegistrationViewModel}"
-             >
+             d:DataContext="{d:DesignInstance Type=viewModels:ChangePasswordViewModel}">
 
     <Grid Background="{DynamicResource MainBackground}">
 
@@ -21,16 +20,16 @@
             <ColumnDefinition Style="{StaticResource EntryWindowsSideColumnStyle}"/>
         </Grid.ColumnDefinitions>
 
-        <Viewbox Grid.Column="1" 
-                 VerticalAlignment="Top" 
+        <Viewbox Grid.Column="1"
+                 VerticalAlignment="Top"
                  Stretch="Uniform">
 
             <StackPanel Width="{x:Static configs:EntryWindowsConfig.ContentWidth}">
 
                 <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
-                           Text="Sign up"/>
+                           Text="Password Change"/>
 
-                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}"
+                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}" 
                                  Height="{x:Static configs:EntryWindowsConfig.LogotypeHeight}"/>
 
                 <Grid Margin="0,30">
@@ -41,60 +40,33 @@
 
                         <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
                                    Margin="3, 0"
-                                   Text="Username"/>
-                    
-
-                        <userControls:ClearableTextBox Text="{Binding Username, Mode=TwoWay, ValidatesOnExceptions=True}" 
-                                                       Style="{DynamicResource EntryWindowsTextBoxStyle}"
-                                                       TabIndex="0"
-                                                       Margin="0, 10, 0, 20"
-                                                       PlaceholderText="Enter username..."/>
-
-                        <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
-                                   Margin="3, 0"
-                                   Text="Email"/>
-
-
-                        <userControls:ClearableTextBox Text="{Binding Email, Mode=TwoWay, ValidatesOnExceptions=True}" 
-                                                       Style="{DynamicResource EntryWindowsTextBoxStyle}"
-                                                       TabIndex="1"
-                                                       Margin="0, 10, 0, 20"
-                                                       PlaceholderText="Enter email..."/>
-
-
-                        <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
-                                   Margin="3, 0"
-                                   Text="Password"/>
+                                   Text="New password"/>
 
 
                         <userControls:ClearablePasswordBox x:Name="mainPassBox" 
                                                            Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                            RelatedPasswordBox="{Binding ElementName=confirmPassBox, UpdateSourceTrigger=PropertyChanged}"
                                                            Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
-                                                           TabIndex="2"
-                                                           Margin="0, 10, 0, 20"
+                                                           Margin="0, 10"
                                                            PlaceholderText="Enter password..."/>
-                    
+
 
                         <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
-                                   Margin="3, 0"
-                                   Text="Confirm Password"/>
-                    
+                                   Margin="3, 10"
+                                   Text="Confirm new password"/>
+
 
                         <userControls:ClearablePasswordBox x:Name="confirmPassBox" 
                                                            Password="{Binding ConfirmationPassword, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                            RelatedPasswordBox="{Binding ElementName=mainPassBox, UpdateSourceTrigger=PropertyChanged}"
                                                            Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
-                                                           TabIndex="3"
-                                                           Margin="0, 10, 0, 20"
                                                            PlaceholderText="Enter password again..."/>
 
-                    
-                        <userControls:Button Command="{Binding SignUpCommand}"
+
+                        <userControls:Button Command="{Binding SubmitCommand}"
                                              Style="{StaticResource EntryWindowsActionCommandStyle}"
-                                             TabIndex="4"
-                                             Margin="0, 5, 0, 0" 
-                                             Text="Sign up"/>
+                                             Margin="0, 25, 0, 0"
+                                             Text="Submit"/>
 
                     </StackPanel>
 
@@ -104,7 +76,6 @@
 
                     <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"
                                                       Background="Transparent"/>
-
 
                     <StackPanel Margin="16"
                                 HorizontalAlignment="Center">
@@ -120,5 +91,7 @@
             </StackPanel>
 
         </Viewbox>
+
     </Grid>
+
 </UserControl>
