--- a/Chat/MVVM/Views/EntryWindows/LoginView.xaml
+++ b/Chat/MVVM/Views/EntryWindows/LoginView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Chat.MVVM.Views.LoginView"
+﻿<UserControl x:Class="Chat.MVVM.Views.EntryWindows.LoginView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Chat.MVVM.Views"
+             xmlns:local="clr-namespace:Chat.MVVM.Views.EntryWindows"
              xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls" 
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
