--- a/Chat/MVVM/Views/EntryWindows/RegistrationView.xaml
+++ b/Chat/MVVM/Views/EntryWindows/RegistrationView.xaml
@@ -1,16 +1,17 @@
-﻿<UserControl x:Class="Chat.MVVM.Views.ChangePasswordView"
+﻿<UserControl x:Class="Chat.MVVM.Views.EntryWindows.RegistrationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Chat.MVVM.Views"
+             xmlns:local="clr-namespace:Chat.MVVM.Views.EntryWindows"
+             xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              xmlns:configs="clr-namespace:Chat.MVVM.Models.Instances.Configs" 
-             xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              mc:Ignorable="d" 
              d:Width="1920" d:Height="1080"
-             d:DataContext="{d:DesignInstance Type=viewModels:ChangePasswordViewModel}">
+             d:DataContext="{d:DesignInstance Type=viewModels:RegistrationViewModel}"
+             >
 
     <Grid Background="{DynamicResource MainBackground}">
 
@@ -20,16 +21,16 @@
             <ColumnDefinition Style="{StaticResource EntryWindowsSideColumnStyle}"/>
         </Grid.ColumnDefinitions>
 
-        <Viewbox Grid.Column="1"
-                 VerticalAlignment="Top"
+        <Viewbox Grid.Column="1" 
+                 VerticalAlignment="Top" 
                  Stretch="Uniform">
 
             <StackPanel Width="{x:Static configs:EntryWindowsConfig.ContentWidth}">
 
                 <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
-                           Text="Password Change"/>
+                           Text="Sign up"/>
 
-                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}" 
+                <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}"
                                  Height="{x:Static configs:EntryWindowsConfig.LogotypeHeight}"/>
 
                 <Grid Margin="0,30">
@@ -40,33 +41,60 @@
 
                         <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
                                    Margin="3, 0"
-                                   Text="New password"/>
+                                   Text="Username"/>
+                    
+
+                        <userControls:ClearableTextBox Text="{Binding Username, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                       Style="{DynamicResource EntryWindowsTextBoxStyle}"
+                                                       TabIndex="0"
+                                                       Margin="0, 10, 0, 20"
+                                                       PlaceholderText="Enter username..."/>
+
+                        <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                                   Margin="3, 0"
+                                   Text="Email"/>
+
+
+                        <userControls:ClearableTextBox Text="{Binding Email, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                       Style="{DynamicResource EntryWindowsTextBoxStyle}"
+                                                       TabIndex="1"
+                                                       Margin="0, 10, 0, 20"
+                                                       PlaceholderText="Enter email..."/>
+
+
+                        <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                                   Margin="3, 0"
+                                   Text="Password"/>
 
 
                         <userControls:ClearablePasswordBox x:Name="mainPassBox" 
                                                            Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                            RelatedPasswordBox="{Binding ElementName=confirmPassBox, UpdateSourceTrigger=PropertyChanged}"
                                                            Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
-                                                           Margin="0, 10"
+                                                           TabIndex="2"
+                                                           Margin="0, 10, 0, 20"
                                                            PlaceholderText="Enter password..."/>
-
+                    
 
                         <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
-                                   Margin="3, 10"
-                                   Text="Confirm new password"/>
-
+                                   Margin="3, 0"
+                                   Text="Confirm Password"/>
+                    
 
                         <userControls:ClearablePasswordBox x:Name="confirmPassBox" 
                                                            Password="{Binding ConfirmationPassword, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                            RelatedPasswordBox="{Binding ElementName=mainPassBox, UpdateSourceTrigger=PropertyChanged}"
                                                            Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                           TabIndex="3"
+                                                           Margin="0, 10, 0, 20"
                                                            PlaceholderText="Enter password again..."/>
 
-
-                        <userControls:Button Command="{Binding SubmitCommand}"
+                    
+                        <userControls:Button Command="{Binding SignUpCommand}"
                                              Style="{StaticResource EntryWindowsActionCommandStyle}"
-                                             Margin="0, 25, 0, 0"
-                                             Text="Submit"/>
+                                             TabIndex="4"
+                                             Margin="0, 5, 0, 0" 
+                                             Text="Sign up"/>
 
                     </StackPanel>
 
@@ -76,6 +104,7 @@
 
                     <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"
                                                       Background="Transparent"/>
+
 
                     <StackPanel Margin="16"
                                 HorizontalAlignment="Center">
@@ -91,7 +120,5 @@
             </StackPanel>
 
         </Viewbox>
-
     </Grid>
-
 </UserControl>
