temp.7.8. refactor of VM: Styles are StaticResources

--- a/Chat/MVVM/Views/EntryWindows/ChangePasswordView.xaml
+++ b/Chat/MVVM/Views/EntryWindows/ChangePasswordView.xaml
@@ -26,7 +26,7 @@
 
             <StackPanel Width="{x:Static configs:EntryWindowsConfig.ContentWidth}">
 
-                <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
+                <TextBlock Style="{StaticResource EntryWindowsCaptionStyle}" 
                            Text="Password Change"/>
 
                 <svgc:SvgViewbox Style="{StaticResource LogotypeStyle}" 
@@ -34,11 +34,11 @@
 
                 <Grid Margin="0,30">
 
-                    <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"/>
+                    <userControls:FilledRoundedBorder Style="{StaticResource EntryWindowsFilledRoundedBorderStyle}"/>
 
                     <StackPanel Margin="24">
 
-                        <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                        <TextBlock Style="{StaticResource EntryWindowsTextBlockStyle}"
                                    Margin="3, 0"
                                    Text="New password"/>
 
@@ -46,12 +46,12 @@
                         <userControls:ClearablePasswordBox x:Name="mainPassBox" 
                                                            Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                            RelatedPasswordBox="{Binding ElementName=confirmPassBox, UpdateSourceTrigger=PropertyChanged}"
-                                                           Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                           Style="{StaticResource EntryWindowsPasswordBoxStyle}"
                                                            Margin="0, 10"
                                                            PlaceholderText="Enter password..."/>
 
 
-                        <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                        <TextBlock Style="{StaticResource EntryWindowsTextBlockStyle}"
                                    Margin="3, 10"
                                    Text="Confirm new password"/>
 
@@ -59,7 +59,7 @@
                         <userControls:ClearablePasswordBox x:Name="confirmPassBox" 
                                                            Password="{Binding ConfirmationPassword, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                            RelatedPasswordBox="{Binding ElementName=mainPassBox, UpdateSourceTrigger=PropertyChanged}"
-                                                           Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                           Style="{StaticResource EntryWindowsPasswordBoxStyle}"
                                                            PlaceholderText="Enter password again..."/>
 
 
@@ -74,7 +74,7 @@
 
                 <Grid>
 
-                    <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"
+                    <userControls:FilledRoundedBorder Style="{StaticResource EntryWindowsFilledRoundedBorderStyle}"
                                                       Background="Transparent"/>
 
                     <StackPanel Margin="16"
