temp.7.9. refactor of Views: correct DataContexts

--- a/Chat/MVVM/Views/EntryWindows/ChangePasswordView.xaml
+++ b/Chat/MVVM/Views/EntryWindows/ChangePasswordView.xaml
@@ -5,12 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views.EntryWindows"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
-             xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
+             xmlns:entryWindowsViewModels="clr-namespace:Chat.MVVM.ViewModels.EntryWindows" 
              xmlns:configs="clr-namespace:Chat.MVVM.Models.Instances.Configs" 
              xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              mc:Ignorable="d" 
              d:Width="1920" d:Height="1080"
-             d:DataContext="{d:DesignInstance Type=viewModels:ChangePasswordViewModel}">
+             d:DataContext="{d:DesignInstance Type=entryWindowsViewModels:ChangePasswordViewModel}">
 
     <Grid Background="{DynamicResource MainBackground}">
 
