--- a/Chat/ResourcesDictionaries/Themes/DarkTheme.xaml
+++ b/Chat/ResourcesDictionaries/Themes/DarkTheme.xaml
@@ -9,7 +9,8 @@
     <SolidColorBrush x:Key="MainButtonBackground">#f0f8ff</SolidColorBrush>
     
     <!--TitleBar-->
-    <SolidColorBrush x:Key="TitleBarBackground">#242f3d</SolidColorBrush>
+    <SolidColorBrush x:Key="TitleBarBackground">#11171f</SolidColorBrush>
+    <SolidColorBrush x:Key="TitleBarBorderBrush">#000000</SolidColorBrush>
     <SolidColorBrush x:Key="MouseOverTitleBarButtonColor">#474747</SolidColorBrush>
     <SolidColorBrush x:Key="IsPressedTitleBarButtonColor">#965659</SolidColorBrush>
     
