--- a/Chat/MVVM/Views/ChatView.xaml
+++ b/Chat/MVVM/Views/ChatView.xaml
@@ -6,7 +6,30 @@
              xmlns:local="clr-namespace:Chat.MVVM.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    
     <Grid>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.33*" MinWidth="240"/>
+            <ColumnDefinition Width="3"/>
+            <ColumnDefinition Width="0.67*" MinWidth="400"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0"
+              Background="{DynamicResource SecondaryBackground}">
             
+        </Grid>
+
+        <GridSplitter Grid.Column="1" 
+                      VerticalAlignment="Stretch" 
+                      HorizontalAlignment="Stretch" 
+                      Background="{DynamicResource ChatGridSplitter}"/>
+
+        <Grid Grid.Column="2" 
+              Background="{DynamicResource MainBackground}">
+            
+        </Grid>
+        
     </Grid>
+    
 </UserControl>
