--- a/Chat/ResourcesDictionaries/Themes/DarkTheme.xaml
+++ b/Chat/ResourcesDictionaries/Themes/DarkTheme.xaml
@@ -2,22 +2,29 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <!--Global-->
-    <SolidColorBrush x:Key="MainBackground"                     Color="#0d1117"/>
-    <SolidColorBrush x:Key="SecondaryBackground"                Color="#161b22"/>
-    <SolidColorBrush x:Key="MainForeground"                     Color="#FFFFFF"/>
-    <SolidColorBrush x:Key="MainBorderBrush"                    Color="#30363d"/>
-    <SolidColorBrush x:Key="MainButtonBackground"               Color="#f0f8ff"/> 
+    <SolidColorBrush x:Key="MainBackground"                                         Color="#0d1117"/>
+    <SolidColorBrush x:Key="SecondaryBackground"                                    Color="#161b22"/>
+    <SolidColorBrush x:Key="MainForeground"                                         Color="#FFFFFF"/>
+    <SolidColorBrush x:Key="MainBorderBrush"                                        Color="#30363d"/>
+    <SolidColorBrush x:Key="MainButtonBackground"                                   Color="#f0f8ff"/> 
     
     <!--TitleBar-->
-    <SolidColorBrush x:Key="TitleBarBackground"                 Color="#11171f"/>
-    <SolidColorBrush x:Key="TitleBarBorderBrush"                Color="#000000"/>
-    <SolidColorBrush x:Key="MouseOverTitleBarButtonColor"       Color="#474747"/>
-    <SolidColorBrush x:Key="IsPressedTitleBarButtonColor"       Color="#965659"/> 
+    <SolidColorBrush x:Key="TitleBarBackground"                                     Color="#11171f"/>
+    <SolidColorBrush x:Key="TitleBarBorderBrush"                                    Color="#000000"/>
+    <SolidColorBrush x:Key="MouseOverTitleBarButtonColor"                           Color="#474747"/>
+    <SolidColorBrush x:Key="IsPressedTitleBarButtonColor"                           Color="#965659"/> 
     
     <!--MainWindow-->
-    <SolidColorBrush x:Key="WindowBorderBrush"                  Color="#000000"/> 
+    <SolidColorBrush x:Key="WindowBorderBrush"                                      Color="#000000"/> 
     
     <!--ChatView-->
-    <SolidColorBrush x:Key="ChatGridSplitter"                   Color="#0b0d12"/> 
+    <SolidColorBrush x:Key="ChatGridSplitter"                                       Color="#0b0d12"/>
+    
+    
+    <!--DialogueCardTemplate-->
+    <SolidColorBrush x:Key="MouseOverDialogueCardBackground"                        Color="#1d232b"/>
+    <SolidColorBrush x:Key="SelectedDialogueCardBackground"                         Color="#223142"/>
+    <SolidColorBrush x:Key="NotSelectedDialogueCardForeground"                      Color="#6d7e9c"/>
+    <SolidColorBrush x:Key="MouseOverSelectedDialogueCardBackground"                Color="#2c3b4d"/>
 
 </ResourceDictionary>
