temp.8.15. additiong of DialogueCardTemplate

--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -40,6 +40,7 @@
                 
                 <!--ControlTemplates-->
                 <ResourceDictionary Source="Styles/ControlTemplates/ErrorTemplate.xaml"/>
+                <ResourceDictionary Source="Styles/ControlTemplates/DialogueCardTemplate.xaml"/>
 
                 <!--from NuGet-->
                 <ui:ControlsDictionary />
